; ModuleID = '/home/carl/AnghaBench/libui/test/extr_page11.c_newg.c'
source_filename = "/home/carl/AnghaBench/libui/test/extr_page11.c_newg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*, i32)* @newg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @newg(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i8*, i8** %3, align 8
  %7 = call i32* @uiNewGroup(i8* %6)
  store i32* %7, i32** %5, align 8
  %8 = load i32, i32* %4, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %2
  %11 = load i32*, i32** %5, align 8
  %12 = call i32 @uiGroupSetChild(i32* %11, i32* null)
  br label %13

13:                                               ; preds = %10, %2
  %14 = load i32*, i32** %5, align 8
  ret i32* %14
}

declare dso_local i32* @uiNewGroup(i8*) #1

declare dso_local i32 @uiGroupSetChild(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
